# 7flows

./: .1flowbase.verify.local.json.example  .gitignore  .prettierignore  AGENTS.md  DESIGN.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
api/: .env.example  AGENTS.md  Cargo.toml  Dockerfile  README.md  celerybeat-schedule.db  pyproject.toml
api/app/: main.py
api/app/api/routes/: __init__.py  auth.py  credentials.py  health.py  model_providers.py  plugins.py  published_endpoint_activity.py  published_endpoint_cache.py  published_endpoint_invocation_detail.py  published_endpoint_invocation_support.py  published_endpoint_keys.py  published_gateway.py  published_gateway_anthropic_routes.py  published_gateway_native_routes.py  published_gateway_openai_routes.py  published_gateway_shared.py  run_callback_tickets.py  run_views.py  runs.py  sensitive_access.py  sensitive_access_http.py  skills.py  system.py  workflow_library.py  workflow_publish.py  workflows.py  workspace_access.py  workspace_starters.py
api/app/core/: __init__.py  celery_app.py  config.py  database.py
api/app/models/: __init__.py  credential.py  plugin.py  run.py  sensitive_access.py  workflow.py  workspace_access.py  workspace_starter.py
api/app/schemas/: __init__.py  credential.py  credential_governance.py  explanations.py  model_provider.py  operator_follow_up.py  plugin.py  run.py  run_views.py  sensitive_access.py  system.py  workflow.py  workflow_contract_validation.py  workflow_graph_validation.py  workflow_legacy_auth_governance.py  workflow_library.py  workflow_node_validation.py  workflow_publish.py  workflow_published_endpoint.py  workflow_runtime_policy.py  workspace_access.py  workspace_starter.py
api/app/services/: agent_runtime.py  agent_runtime_llm_assistant.py  agent_runtime_llm_finalize.py  agent_runtime_llm_plan.py  agent_runtime_llm_support.py  artifact_store.py  callback_blocker_deltas.py  callback_waiting_lifecycle.py  context_service.py  credential_governance.py  credential_store.py  flow_compiler.py  llm_provider.py  model_provider_registry.py  notification_channel_diagnostics.py  notification_channel_governance.py  notification_delivery.py  operator_follow_up_snapshots.py  operator_run_follow_up.py  plugin_execution_contract.py  plugin_execution_dispatch.py  plugin_registry_store.py  plugin_runtime.py  plugin_runtime_adapter_clients.py  plugin_runtime_proxy.py  plugin_runtime_registry.py  plugin_runtime_types.py  published_cache.py  published_cache_inventory_access.py  published_gateway.py  published_gateway_binding_invoker.py  published_gateway_invocation_recorder.py  published_gateway_protocol_surface.py  published_gateway_response_builders.py  published_gateway_types.py  published_invocation_audit.py  published_invocation_audit_aggregation.py  published_invocation_audit_timeline.py  published_invocation_exports.py  published_invocation_types.py  (+58 more)
api/app/tasks/: __init__.py  heartbeat.py
api/apps/api-server/: .env.example  .env.production.example  Cargo.toml
api/apps/api-server/src/: app_state.rs  application_public_docs.rs  config.rs  lib.rs  main.rs  official_plugin_registry.rs  openapi.rs  openapi_docs.rs  provider_runtime.rs  runtime_registry_sync.rs
api/apps/api-server/tests/: health_routes.rs
api/apps/plugin-runner/: Cargo.toml
api/crates/access-control/: Cargo.toml
api/crates/control-plane/: Cargo.toml
api/crates/domain/: Cargo.toml
api/crates/orchestration-runtime/: Cargo.toml
api/crates/plugin-framework/: Cargo.toml
api/crates/runtime-core/: Cargo.toml
api/crates/runtime-profile/: Cargo.toml
api/crates/storage-ephemeral/: Cargo.toml  README.md
api/crates/storage-pg/: Cargo.toml
api/docker/: entrypoint.sh
api/migrations/: env.py
api/migrations/versions/: 20260309_0001_initial_runtime.py  20260310_0003_plugin_registry_persistence.py  20260311_0005_workspace_starter_archive.py  20260311_0007_durable_agent_runtime.py  20260311_0008_run_callback_tickets.py  20260312_0013_published_endpoint_alias_path.py  20260312_0014_published_endpoint_invocations.py  20260312_0016_publish_endpoint_rate_limits.py  20260312_0017_publish_endpoint_cache.py  20260312_0018_publish_invocation_cache_status.py  20260315_0021_sensitive_access_control.py  20260319_0027_tool_call_response_contract.py  20260324_0028_credential_audit_records.py  20260327_0029_workspace_access.py  20260403_0031_external_identity_bindings.py
api/plugins/: .gitignore
api/sevenflows_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/tests/: conftest.py  test_agent_runtime_llm_integration.py  test_celery_app.py  test_credential_store.py  test_health.py  test_llm_provider.py  test_notification_channel_diagnostics.py  test_notification_channel_governance.py  test_notification_delivery.py  test_operator_run_follow_up.py  test_plugin_registry_store.py  test_plugin_routes.py  test_plugin_runtime.py  test_published_endpoint_api_keys.py  test_published_endpoint_invocation_support.py  test_published_gateway_service.py  test_published_invocation_detail_access.py  test_published_invocation_exports.py  test_published_native_async_routes.py  test_published_protocol_async_routes.py  test_published_protocol_streaming.py  test_run_action_explanations.py  test_run_callback_ticket_routes.py  test_run_execution_focus_explanations.py  test_run_routes.py  test_run_trace_export_access.py  test_run_trace_views.py  test_run_view_routes.py  test_runtime_credential_integration.py  test_runtime_sensitive_tool_gateway.py  test_runtime_service.py  test_runtime_service_agent_runtime.py  test_sensitive_access_http.py  test_sensitive_access_routes.py  test_skill_routes.py  test_system_routes.py  test_workflow_library_catalog.py  test_workflow_library_routes.py  test_workflow_publish_activity.py  test_workflow_publish_routes.py  (+4 more)
services/compat-dify/: .gitignore  Dockerfile  README.md  pyproject.toml
services/compat-dify/app/: catalog.py  config.py  dify_daemon.py  main.py  schemas.py
services/compat-dify/tests/: test_adapter_app.py  test_dify_daemon.py
(+2275 files in other folders)
