[workspace]
members = [
  "apps/api-server",
  "apps/plugin-runner",
  "crates/domain",
  "crates/control-plane",
  "crates/runtime-core",
  "crates/publish-gateway",
  "crates/access-control",
  "crates/plugin-framework",
  "crates/storage-pg",
  "crates/storage-redis",
  "crates/storage-object",
  "crates/observability"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
uuid = { version = "1", features = ["serde", "v7"] }
