[package]
name = "plugin-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
plugin-framework = { path = "../../crates/plugin-framework" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
