[package]
name = "storage-pg"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
access-control = { path = "../access-control" }
anyhow.workspace = true
async-trait.workspace = true
control-plane = { path = "../control-plane" }
domain = { path = "../domain" }
runtime-core = { path = "../runtime-core" }
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
